<resources>
    <string name="app_name">LearnEasy</string>
    <string name="title_activity_base_host">Learn Easy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_remember">Remember</string>
    <string name="menu_fast_read">Fast read</string>
    <string name="menu_running_string">Running string</string>
    <string name="menu_check_memory">Check memory</string>
    <string name="menu_word_top">Word running top</string>
    <string name="menu_cards">Cards</string>
    <string name="menu_diary">Diary</string>
    <string name="menu_canvas">Canvas</string>
    <string name="menu_video_notes">Video notes</string>
    <string name="cd_refresh">Refresh</string>
    <string name="cd_show_all">Show all</string>
    <string name="cd_show_suggestion">Show suggestion</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="speed">Speed</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_color">Color</string>
    <string name="lbl_width">Width</string>
    <string name="lbl_clear">Clear</string>
    <string name="save">Save</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="color">Color</string>
    <string name="w_1">1</string>
    <string name="w_1_1">1,1</string>
    <string name="w_1_2">1,2</string>
    <string name="w_1_3">1,3</string>
    <string name="w_1_4">1,4</string>
    <string name="w_1_5">1,5</string>
    <string name="w_1_6">1,6</string>
    <string name="w_1_7">1,7</string>
    <string name="w_1_8">1,8</string>
    <string name="w_1_9">1,9</string>
    <string name="w_2">2</string>
    <string name="enter_name">Enter name</string>
    <string name="save_success">Save success</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="delete_paint">Delete paint?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete_success">Deleted</string>
    <string name="not_have_diaries">Not have diaries</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_text">Enter text</string>
    <string name="diary_created">Diary saved!</string>
    <string name="delete_diary">Delete diary</string>
    <string name="error">Error</string>
    <string name="enter_data">Enter title and record a video</string>
    <string name="record_video">Record video</string>
    <string name="video_was_recorded">Video recorded!</string>
    <string name="delete_video_note">Delete video note?</string>
    <string name="delete_card">Delete card?</string>
    <string name="description">Description</string>
    <string name="record_audio">Record audio</string>
    <string name="add_image">Make photo</string>
    <string name="audio_was_recorded">Audio was recorded!</string>
    <string name="image_take_success">Take image success!</string>
    <string name="enter_text_and_description">Enter title and description</string>
    <string name="audio">Audio</string>
    <string name="select_doc">Select document</string>
    <string name="click_play_for_start">Click play for start!</string>
    <string name="lbl_enter_text">Enter text</string>

</resources>
