<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.cards.add.AddCardFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCard"
            app:cardCornerRadius="12dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_default"
            android:layout_width="300dp"
            android:layout_height="300dp">

            <ImageView
                android:src="@drawable/back_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_margin="@dimen/margin_default"
                    style="@style/CustomEditText"
                    android:hint="@string/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_margin="@dimen/margin_default"
                    android:hint="@string/description"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnAddVideoRecord"
            android:padding="@dimen/margin_default"
            android:background="@color/colorAccent"
            android:drawableEnd="@drawable/icon_video_notes"
            android:drawablePadding="@dimen/margin_default"
            android:text="@string/record_video"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnAudioRecord"
            android:padding="@dimen/margin_default"
            android:background="@color/colorAccent"
            android:drawableEnd="@drawable/ic_audio"
            android:drawablePadding="@dimen/margin_default"
            android:text="@string/record_audio"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnAddImage"
            android:padding="@dimen/margin_default"
            android:background="@color/colorAccent"
            android:drawableEnd="@drawable/ic_image"
            android:drawablePadding="@dimen/margin_default"
            android:text="@string/add_image"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnCancel"
                android:padding="@dimen/margin_default"
                style="@style/CustomButton"
                android:text="@string/cancel"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnSave"
                android:padding="@dimen/margin_default"
                android:text="@string/save"
                style="@style/CustomButton"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>